--- a/demo/index.html
+++ b/demo/index.html
@@ -3,21 +3,36 @@
     <head>
         <title>Sliderbase Demo - by Codesalsa</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+		<link href="css/custom.css" rel="stylesheet" type="text/css" />
 		<link href="css/sliderbase.css" rel="stylesheet" type="text/css" />
 		<style>
 			body{
 				margin:0;
-				padding:0;
-			}
-			.container{
-				margin:100px auto 0;
-				max-width:1170px;
-				width:100%;
-				display:table;
+				padding:120px 0 0;
 			}
 		</style>
     </head>
-    <body>
+   <body>
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+		  <div class="container">
+			<div class="navbar-header">
+			  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			  </button>
+			  <a class="navbar-brand" href="http://codesalsa.net/backTop">Code Salsa - Sliderbase</a>
+			</div>
+			<div id="navbar" class="collapse navbar-collapse">
+			  <ul class="nav navbar-nav">
+				<li class="active"><a href="#">Home</a></li>
+				<li><a href="#about">About</a></li>
+				<li><a href="#contact">Contact</a></li>
+			  </ul>
+			</div><!--/.nav-collapse -->
+		  </div>
+		</nav>
 		<div class="container">
 			<div id="slider">
 				<ul class="slides">
